user struct dto
